row0sel.c:   Fix bug #12947 : a consistent read could return inconsistent results; this bug was introduced in 5.0.5

innobase/row/row0sel.c:
  Fix bug #12947 : a consistent read could return inconsistent results; this bug was introduced in 5.0.5